# roas6000_final

./: CMakeLists.txt  README.md  face_recognizer_file.xml  mapping.rviz  package.xml  roas_main.launch  roas_slam.launch  roas_teleop.launch
scripts/: area_check.py  cv_detect_cus.py  cv_detect_cus_test.py  dlib_detection.py  dlib_test.py  teleop_twist_keyboard.py  visual_servoing.py
scripts/test/: cv_detect.py  cv_detect_cus.py
scripts/test/training/: face_recognizer_file.xml  train.py
